--- a/src/package.xml
+++ b/src/package.xml
@@ -17,5 +17,9 @@
         <members>S1QuotePDFSettings.Template_ID</members>
         <name>CustomMetadata</name>
     </types>
+    <types>
+        <members>S1QuotePDFSettings__mdt</members>
+        <name>CustomObject</name>
+    </types>
     <version>34.0</version>
 </Package>
